# resellerclub-python

./: pylintrc.toml  pyproject.toml  requirements.txt  resellerclub.py  urls.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: python-tests.yml
resellerclub/: resellerclub.py  urls.py
resellerclub/api/: __init__.py  domains.py
resellerclub/api/urls/: domains.py  urls.py
resellerclub/urls/: domains.py  urls.py
resellerclubapi/: __init__.py  resellerclub.py
src/resellerclub/: __init__.py  resellerclub.py  wrapper.py
src/resellerclub/api/: base.py  domains.py
src/resellerclub/api/urls/: base.py  domains.py  urls.py
src/resellerclub/client/: base.py  customers.py  domains.py
src/resellerclub/client/urls/: customers.py  urls.py
src/resellerclub/models/: __init__.py  customer.py  domains.py
src/resellerclub/resources/: customer.py
tests/: conftest.py  customers_test.py  domains_test.py  mocks.py  tests_settings.py
tests/responses/: customers.txt  generate_token.txt
tests/responses/customers/: authenticate_token.txt  customer_details.txt  customers.txt  generate_login_token.txt  sign_up.txt
tests/responses/domains/: single_domain_multiple_tlds.txt
tests/responses/domains/3rd_level_name_availability/: multiple_domains.txt  single_domain.txt
tests/responses/domains/availability/: multiple_domains_multiple_tlds.txt  multiple_domains_single_tld.txt  single_domain_availability.txt
tests/responses/domains/idn_availability/: multiple_domains.txt  single_domain.txt
tests/responses/domains/suggest_names/: tld.txt  (+2 more)
(+5 files in other folders)
