[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resellerclub-python"
dynamic = ["version"]
authors = [{ name = "TI Sin Problemas", email = "pypi@tisinproblemas.com" }]
description = "A client for ResellerClub HTTP API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["requests>=2.32.3"]
keywords = ["resellerclub", "api", "client"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]

[project.urls]
Issues = "https://github.com/TI-Sin-Problemas/resellerclub-python/issues"
Source = "https://github.com/TI-Sin-Problemas/resellerclub-python"

[tool.hatch.version]
path = "resellerclub_python/__init__.py"
